src/objects/Apttus_Config2__Incentive__c.object
<CustomObject>
    <description>Represents an incentive associated with one or more products</description>
    <fields>
        <fullName>Apttus_CMConfig__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_CMConfig__PayoutFrequency__c</fullName>
        <description>The incentive payout frequency</description>
        <inlineHelpText>The incentive payout frequency</inlineHelpText>
        <label>Payout Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
                <value>
                    <fullName>One Time</fullName>
                    <default>true</default>
                    <label>One Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScopeOper__c</fullName>
        <description>The account scope operator</description>
        <inlineHelpText>The account scope operator</inlineHelpText>
        <label>Account Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountScope__c</fullName>
        <description>One or more accounts associated with the incentive</description>
        <inlineHelpText>One or more accounts associated with the incentive</inlineHelpText>
        <label>Account Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScopeOper__c</fullName>
        <description>The account type scope operator</description>
        <inlineHelpText>The account type scope operator</inlineHelpText>
        <label>Account Type Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AccountTypeScope__c</fullName>
        <description>One or more account types associated with the incentive</description>
        <inlineHelpText>One or more account types associated with the incentive</inlineHelpText>
        <label>Account Type Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the incentive is active</description>
        <inlineHelpText>Indicates whether the incentive is active</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AmendmentEffectiveDate__c</fullName>
        <description>The date when the amendment to the incentive takes effect</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date when the amendment to the incentive takes effect</inlineHelpText>
        <label>Amendment Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AncestorId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ancestor incentive</description>
        <inlineHelpText>ID of the ancestor incentive</inlineHelpText>
        <label>Ancestor</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Incentives (Derived)</relationshipLabel>
        <relationshipName>DerivedIncentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ApplicationMethod__c</fullName>
        <description>The incentive application method, depends on the application type.</description>
        <inlineHelpText>The incentive application method, depends on the application type.</inlineHelpText>
        <label>Application Method</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Buy X Get X</fullName>
                    <default>true</default>
                    <label>Buy X Get X</label>
                </value>
                <value>
                    <fullName>Buy X Get Y</fullName>
                </value>
                <value>
                    <fullName>Own X Get Y</fullName>
                </value>
                <value>
                    <fullName>For Every X Get X</fullName>
                </value>
                <value>
                    <fullName>For Every X Get Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AutoApply__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the incentive would be automatically applied during pricing</description>
        <inlineHelpText>Indicates whether the incentive would be automatically applied during pricing</inlineHelpText>
        <label>Auto Apply ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BenefitUom__c</fullName>
        <description>The benefit unit of measure for the product</description>
        <inlineHelpText>The benefit unit of measure for the product</inlineHelpText>
        <label>Benefit Uom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                </value>
                <value>
                    <fullName>Hour</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CombineWithOtherIncentives__c</fullName>
        <description>Indicates whether the incentive can be combined with others</description>
        <formula>IF(Apttus_Config2__StopProcessingMoreIncentives__c, &quot;No&quot; , &quot;Yes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Combine With Other Promotion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ContextType__c</fullName>
        <description>The type of context associated with the incentive</description>
        <inlineHelpText>The type of context associated with the incentive</inlineHelpText>
        <label>Context Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Line Item</fullName>
                    <default>true</default>
                    <label>Line Item</label>
                </value>
                <value>
                    <fullName>Order Line Item</fullName>
                </value>
                <value>
                    <fullName>External Order Summary Item</fullName>
                </value>
                <value>
                    <fullName>Milestone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScopeOper__c</fullName>
        <description>The country scope operator</description>
        <inlineHelpText>The country scope operator</inlineHelpText>
        <label>Country Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CountryScope__c</fullName>
        <description>One or more countries associated with the incentive</description>
        <inlineHelpText>One or more countries associated with the incentive</inlineHelpText>
        <label>Country Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomDisplaySetting__c</fullName>
        <description>The the name of the custom display setting associated with the incentive. This will be used when an existing incentive record is “Edited”. 
For a new record, the name will be passed as a URL parameter.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The the name of the custom display setting associated with the incentive. This will be used when an existing incentive record is “Edited”. 
For a new record, the name will be passed as a URL parameter.</inlineHelpText>
        <label>Custom Display Setting</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CycleEndDate__c</fullName>
        <description>The cycle end date. Indicates the end of a loyalty program cycle</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The cycle end date. Indicates the end of a loyalty program cycle</inlineHelpText>
        <label>Cycle End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CycleStartDate__c</fullName>
        <description>The cycle start date. Indicates the start of a loyalty program cycle.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The cycle start date. Indicates the start of a loyalty program cycle.</inlineHelpText>
        <label>Cycle Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The incentive description</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive description</inlineHelpText>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Downgrade__c</fullName>
        <label>Downgrade</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>During Program</fullName>
                </value>
                <value>
                    <fullName>Next Program</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EffectiveDate__c</fullName>
        <defaultValue>DATE(2000,01,01)</defaultValue>
        <description>The incentive effective date. The incentive becomes effective on this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive effective date. The incentive becomes effective on this date.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableBenefitEffectivityDates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether effective dates are enabled for benefits associated with the incentive</description>
        <inlineHelpText>Indicates whether effective dates are enabled for benefits associated with the incentive</inlineHelpText>
        <label>Enable Benefit Effectivity Dates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExcludeChildrenWithActivePrograms__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether orders from child accounts with activate rebate agreements should excluded from rebate processing. Only applicable when including orders from account hierarchy.</description>
        <inlineHelpText>Indicates whether orders from child accounts with activate rebate agreements should excluded from rebate processing. Only applicable when including orders from account hierarchy.</inlineHelpText>
        <label>Exclude Children With Active Programs ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExpirationDate__c</fullName>
        <defaultValue>DATE(2099,12,31)</defaultValue>
        <description>The incentive expiration date. The incentive becomes ineffective after this date.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive expiration date. The incentive becomes ineffective after this date.</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveCode__c</fullName>
        <description>The incentive code available to customers to identify the incentive</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The incentive code available to customers to identify the incentive</inlineHelpText>
        <label>Incentive Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated incentive group</description>
        <inlineHelpText>ID of the associated incentive group</inlineHelpText>
        <label>Incentive Group</label>
        <referenceTo>Apttus_Config2__IncentiveGroup__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveNumberAuto__c</fullName>
        <description>The system assigned unique incentive number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</description>
        <displayFormat>ICT-{000000}</displayFormat>
        <inlineHelpText>The system assigned unique incentive number. FOR INTERNAL USE ONLY. DO NOT SHOW IN SCREENS, REPORTS, ETC.</inlineHelpText>
        <label>Incentive Number Auto (INTERNAL)</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveNumberText__c</fullName>
        <description>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>FOR INTERNAL USE ONLY. DO NOT USE IN SCREENS, REPORTS, ETC.</inlineHelpText>
        <label>Incentive Number Text  (INTERNAL)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncentiveNumber__c</fullName>
        <description>Identifies the incentive number, including the version number. Use this field to display on screens, reports, dashboards, search filters and columns, etc. The other incentive number fields are for internal use only.</description>
        <formula>Apttus_Config2__IncentiveNumberText__c &amp; &quot;.&quot; &amp; TEXT(CEILING(Apttus_Config2__VersionNumber__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identifies the incentive number, including the version number.</inlineHelpText>
        <label>Incentive Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IncludeOrdersForAccountHierarchy__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether orders for the account hierarchy should be included for rebate processing</description>
        <inlineHelpText>Indicates whether orders for the account hierarchy should be included for rebate processing</inlineHelpText>
        <label>Include Orders For Account Hierarchy ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsBundle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to use the ratio field on the price rule.</description>
        <inlineHelpText>Indicates whether to use the ratio field on the price rule.</inlineHelpText>
        <label>Is Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsTaskPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are any tasks pending for the incentive</description>
        <inlineHelpText>Indicates whether there are any tasks pending for the incentive</inlineHelpText>
        <label>Is Task Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LoyaltyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the loyalty incentive associated with the point accrual.</description>
        <inlineHelpText>ID of the loyalty incentive associated with the point accrual.</inlineHelpText>
        <label>Loyalty</label>
        <referenceTo>Apttus_Config2__Incentive__c</referenceTo>
        <relationshipLabel>Point Accrual Incentives</relationshipLabel>
        <relationshipName>PointAccrualIncentives</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MaxPoints__c</fullName>
        <description>The maximum loyalty points that may be accrued for an enrollment in the loyalty program</description>
        <inlineHelpText>The maximum loyalty points that may be accrued for an enrollment in the loyalty program</inlineHelpText>
        <label>Max Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OriginalEffectiveDate__c</fullName>
        <description>The original effective date associated with the incentive</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The original effective date associated with the incentive</inlineHelpText>
        <label>Original Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PointAccrualLevel__c</fullName>
        <description>The point accrual level</description>
        <inlineHelpText>The point accrual level</inlineHelpText>
        <label>Point Accrual Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListScopeOper__c</fullName>
        <description>The price list scope operator</description>
        <inlineHelpText>The price list scope operator</inlineHelpText>
        <label>Price List Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListScope__c</fullName>
        <description>One or more price lists associated with the incentive</description>
        <inlineHelpText>One or more price lists associated with the incentive</inlineHelpText>
        <label>Price List Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScopeOper__c</fullName>
        <description>The product family scope operator</description>
        <inlineHelpText>The product family scope operator</inlineHelpText>
        <label>Product Family Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductFamilyScope__c</fullName>
        <description>One or more product families associated with the incentive</description>
        <inlineHelpText>One or more product families associated with the incentive</inlineHelpText>
        <label>Product Family Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScopeOper__c</fullName>
        <description>The product group scope operator</description>
        <inlineHelpText>The product group scope operator</inlineHelpText>
        <label>Product Group Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductGroupScope__c</fullName>
        <description>One or more product groups associated with the incentive</description>
        <inlineHelpText>One or more product groups associated with the incentive</inlineHelpText>
        <label>Product Group Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScopeOper__c</fullName>
        <description>The product scope operator</description>
        <inlineHelpText>The product scope operator</inlineHelpText>
        <label>Product Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductScope__c</fullName>
        <description>One or more products associated with the incentive</description>
        <inlineHelpText>One or more products associated with the incentive</inlineHelpText>
        <label>Product Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecurrenceFrequency__c</fullName>
        <description>The recurrence frequency.  e.g. Loyalty program cycle.</description>
        <inlineHelpText>The recurrence frequency.  e.g. Loyalty program cycle.</inlineHelpText>
        <label>Recurrence Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Half Yearly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScopeOper__c</fullName>
        <description>The region scope operator</description>
        <inlineHelpText>The region scope operator</inlineHelpText>
        <label>Region Scope Oper</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RegionScope__c</fullName>
        <description>One or more regions associated with the incentive</description>
        <inlineHelpText>One or more regions associated with the incentive</inlineHelpText>
        <label>Region Scope</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RenewalEffectiveDate__c</fullName>
        <description>The date when the renewal for the incentive takes effect</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The date when the renewal for the incentive takes effect</inlineHelpText>
        <label>Renewal Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchField__c</fullName>
        <description>The incentive search field. This field is used in the side bar search</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>The incentive search field</inlineHelpText>
        <label>Search Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The incentive priority sequence. Indicates the order of application of the incentive.</description>
        <inlineHelpText>The incentive priority sequence. Indicates the order of application of the incentive.</inlineHelpText>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <description>The incentive status</description>
        <inlineHelpText>The incentive status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Being Renewed</fullName>
                </value>
                <value>
                    <fullName>In Renewal</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Being Terminated</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StopProcessingMoreIncentives__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to prevent subsequent incentives from processing</description>
        <inlineHelpText>Indicator to prevent subsequent incentives from processing</inlineHelpText>
        <label>Stop Processing More Incentives</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SubUseType__c</fullName>
        <label>Application Sub-Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_Config2__UseType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Point Accrual</fullName>
                    <default>true</default>
                    <label>Point Accrual</label>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
                <value>
                    <fullName>Promotion</fullName>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Milestone Incentive</fullName>
                </value>
                <value>
                    <fullName>Price Program</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Upgrade__c</fullName>
        <label>Upgrade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>During Program</fullName>
                </value>
                <value>
                    <fullName>Next Program</fullName>
                </value>
                <value>
                    <fullName>Never</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__UseType__c</fullName>
        <description>The incentive use type</description>
        <inlineHelpText>The incentive use type</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotion</fullName>
                    <default>true</default>
                    <label>Promotion</label>
                </value>
                <value>
                    <fullName>Rebate</fullName>
                </value>
                <value>
                    <fullName>Milestone Incentive</fullName>
                </value>
                <value>
                    <fullName>Price Program</fullName>
                </value>
                <value>
                    <fullName>Loyalty</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__VersionNumber__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The incentive version number</description>
        <inlineHelpText>The incentive version number</inlineHelpText>
        <label>Version Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <inlineHelpText>ID of the associated quote/proposal</inlineHelpText>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Incentives</relationshipLabel>
        <relationshipName>Incentives</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>